assets/css/style.css
@import url('https://fonts.googleapis.com/css?family=Montserrat:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i');

/* Add a smooth scrolling effect to the document */
html {
    scroll-behavior: smooth;
}

a {
    text-decoration: none; /* Remov lines on social media icons */
}

/* The Overlay (background) */
.overlay {
    height: 100%;
    width: 0;
    position: fixed;
    z-index: 2; /* Sit on top */
    top: 0;
    left: 0;
    background-color: rgb(0,0,0);
    background-color: rgba(0,0,0, 0.9);
    overflow-x: hidden; /* Disable horizontal scroll */
    transition: 0.5s;
}

/* Content positioning inside the overlay */
.overlay-content {
    position: relative;
    top: 25%;
    width: 100%;
    text-align: center;
    margin-top: 30px;
}

.overlay a {
    padding: 8px;
    text-decoration: none;
    font-size: 36px;
    color: #818181;
    display: block;
    transition: 0.3s;
}

.overlay a:hover, .overlay a:focus {
    color: #f1f1f1;
}

.overlay .closebtn {
    position: absolute;
    top: 20px;
    right: 45px;
    font-size: 60px;
}


.logo {
    position: absolute;
    display: block;
    cursor: pointer;
    left: 50%;
    transform: translateX(-50%);
    z-index: 1;
    top: 2rem;
    width: 77px;
    height: 74px;
}

.social-header {
    position: absolute;
    top: auto;
    right: 0;
}


.social-media i {
    color: #c60a09;
    font-size: 1.3rem;
    text-decoration: none;
}

/* Hover effect for social media icons 
.fab:hover {
  opacity: 0.7;
} */

/* Hover effect for social media icons - credit to Ian Lunn (https://ianlunn.github.io/Hover/) */
/* Buzz Out */
@-webkit-keyframes hvr-buzz-out {
  10% {
    -webkit-transform: translateX(3px) rotate(2deg);
    transform: translateX(3px) rotate(2deg);
  }
  20% {
    -webkit-transform: translateX(-3px) rotate(-2deg);
    transform: translateX(-3px) rotate(-2deg);
  }
  30% {
    -webkit-transform: translateX(3px) rotate(2deg);
    transform: translateX(3px) rotate(2deg);
  }
  40% {
    -webkit-transform: translateX(-3px) rotate(-2deg);
    transform: translateX(-3px) rotate(-2deg);
  }
  50% {
    -webkit-transform: translateX(2px) rotate(1deg);
    transform: translateX(2px) rotate(1deg);
  }
  60% {
    -webkit-transform: translateX(-2px) rotate(-1deg);
    transform: translateX(-2px) rotate(-1deg);
  }
  70% {
    -webkit-transform: translateX(2px) rotate(1deg);
    transform: translateX(2px) rotate(1deg);
  }
  80% {
    -webkit-transform: translateX(-2px) rotate(-1deg);
    transform: translateX(-2px) rotate(-1deg);
  }
  90% {
    -webkit-transform: translateX(1px) rotate(0);
    transform: translateX(1px) rotate(0);
  }
  100% {
    -webkit-transform: translateX(-1px) rotate(0);
    transform: translateX(-1px) rotate(0);
  }
}
@keyframes hvr-buzz-out {
  10% {
    -webkit-transform: translateX(3px) rotate(2deg);
    transform: translateX(3px) rotate(2deg);
  }
  20% {
    -webkit-transform: translateX(-3px) rotate(-2deg);
    transform: translateX(-3px) rotate(-2deg);
  }
  30% {
    -webkit-transform: translateX(3px) rotate(2deg);
    transform: translateX(3px) rotate(2deg);
  }
  40% {
    -webkit-transform: translateX(-3px) rotate(-2deg);
    transform: translateX(-3px) rotate(-2deg);
  }
  50% {
    -webkit-transform: translateX(2px) rotate(1deg);
    transform: translateX(2px) rotate(1deg);
  }
  60% {
    -webkit-transform: translateX(-2px) rotate(-1deg);
    transform: translateX(-2px) rotate(-1deg);
  }
  70% {
    -webkit-transform: translateX(2px) rotate(1deg);
    transform: translateX(2px) rotate(1deg);
  }

  80% {
    -webkit-transform: translateX(-2px) rotate(-1deg);
    transform: translateX(-2px) rotate(-1deg);
}
  90% {
    -webkit-transform: translateX(1px) rotate(0);
    transform: translateX(1px) rotate(0);
  }
  100% {
    -webkit-transform: translateX(-1px) rotate(0);
    transform: translateX(-1px) rotate(0);
  }
}
.hvr-buzz-out {
  display: inline-block;
  vertical-align: middle;
  -webkit-transform: perspective(1px) translateZ(0);
  transform: perspective(1px) translateZ(0);
  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
}
.hvr-buzz-out:hover, .hvr-buzz-out:focus, .hvr-buzz-out:active {
  -webkit-animation-name: hvr-buzz-out;
  animation-name: hvr-buzz-out;
  -webkit-animation-duration: 0.75s;
  animation-duration: 0.75s;
  -webkit-animation-timing-function: linear;
  animation-timing-function: linear;
  -webkit-animation-iteration-count: 1;
  animation-iteration-count: 1;
}


#hero-image {
    position: relative;
    display: block;
    background: url(../images/hero-image.jpg) no-repeat center;
    background-size: cover;
    width: 100vw;
    height: 92vh;
    margin: auto;
}

.hero-text {
    text-align: center;
    font-family: 'Montserrat', sans-serif;
    font-size: 3.2rem;
    font-weight: 500;
    letter-spacing: 0.2rem;
    padding-top: 12.2rem;
    color: #fafafa;
    text-shadow: 0.2rem 0.2rem #343a40;
    min-width: 100%;
    min-height: 8.5rem;
    position: relative;
    z-index: 1;
}

.hero-text::before {
    content: "";
    display: block;
    position: absolute;
    margin-left: 0;
    min-width: 100%;
    min-height: 8.5rem;
    z-index: -1;
    opacity: 0.3;
    background-color: #c60a09;
}


.para-explore {
    margin-top: 2rem;
}

/* Back to top arrow - code with small modification taken from: 
https://www.w3schools.com/howto/howto_js_scroll_to_top.asp */
#arrow_2top {
    position: fixed;
    bottom: 0.1rem;
    right: 1rem;
    z-index: 99; /* Make sure it does not overlap */
    border: none;
    outline: none;
    background-color: transparent;
    color: #f23332;
    opacity: 0.4;
    cursor: pointer; /* Add a mouse pointer on hover */
}
#arrow_2top:hover {
    color:#c60a09;
}

.icon {
    margin-top: 4.5rem;
}

.text-header {
    color: #c60a09;
}

.para-explore {
    color: #000000;
}

.np-img {
    max-width: 100%;
    height: auto;
    padding: 0;
}

#map {
    height: 650px;
    width: 100%;
}


.form-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    padding-bottom: 4.5rem;
}

form input {
    margin-top: 1rem;
    margin-bottom: 1rem;
}

.btn-contact {
    background-color: #c60a09;
    color: #fafafa;
    border: none;
    display: block;
    text-align: center;
    line-height: 1rem;
    padding: 0.6rem 1.8rem;
    border-radius: 0.7rem;
    text-transform: uppercase;
    font-size: 1.1rem;
    margin: auto;
}

.btn-contact:hover,
.btn-contact:focus,
.btn-contact:active {
    background-color: #f23332 !important;
    border-color: #f23332 !important;
    box-shadow: 0.2rem 0.2rem #df2f2f !important;
    border: 0.12rem solid;
}

.footer-section {
    background-color: #f23332;
    color: #fafafa;
    font-size: 0.9rem;
    font-family: 'Merriweather Sans', sans-serif;
    font-weight: 200;
}


/* Media Queries */
/* Display on medium screens (tablet devices) */
@media screen and (min-width: 764px) {
    .logo {
        width: 130px;
        height: 133px;
        top: 0;
    }

    .social-media i {
        font-size: 1.8rem;
    }

    .menu-btn {
        right: 25px;
    }

    #hero-image {
        height: 95vh;
    }
}

/* Display on large devices */
@media screen and (min-width: 1024px) {
    .logo {
        width: 130px;
        height: 133px;
        top: 0;
    }

    .social-media i {
        font-size: 2rem;
    }

    #hero-image {
        height: 90vh;
    }

}

